# ppidd

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  GNUmakefile  Makefile.in  README  bitbucket-pipelines.yml  configure  configure.ac  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  menudata.js  ppidd-config.in  ppidd_8cpp.html  ppidd_8cpp__incl.map  ppidd_8cpp__incl.md5  ppidd_8cpp_source.html  ppidd__doxygen_8h.html  ppidd__doxygen_8h_source.html
.github/workflows/: build-and-test.yml  docker-publish.yml  doxygen-gh-pages.yml
DoxygenTagFiles/: ppidd.tag
doc/: Doxyfile  ppidd_doxygen.h
docker/: Dockerfile
search/: all_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  variables_0.js
src/: CMakeLists.txt  Doxyfile  Doxyfile.in  GNUmakefile  Makefile.in  mpi_helpmutex.c  mpi_helpmutex.cpp  mpi_nxtval.c  mpi_nxtval.cpp  mpi_nxtval.h  mpi_utils.c  mpi_utils.cpp  mpi_utils.h  mpiga_base.c  mpiga_base.cpp  mpiga_base.h  mpimutex-hybrid.cpp  mpimutex.h  ppidd.cpp  ppidd.h  ppidd.h.in  ppidd_c.c  ppidd_c.cpp  ppidd_c.h  ppidd_config.h.in  ppidd_defines.h  ppidd_doxygen.h  ppidd_dtype.h  ppidd_eaf.cpp  ppidd_eaf.h  ppidd_eaf_c.c  ppidd_eaf_c.cpp  ppidd_eaf_c.h  ppidd_eaf_fortran.c  ppidd_eaf_fortran.cpp  ppidd_eaf_fortran.h  ppidd_eaf_share.h  ppidd_fortran.c  ppidd_fortran.cpp  ppidd_fortran.h  (+27 more)
src/configure/: GNUmakefile  config.h.in  config.mk.in  configure.ac  may_fc_module_filename_format.m4  ppidd_config.h.in  ppidd_macros.m4
src/util/: machines.h
test/: CMakeLists.txt  GNUmakefile  Makefile.in  ppidd_ctest.c  ppidd_ctest.cpp  ppidd_flush6.F  ppidd_init_mod.F  ppidd_sf_test.F  ppidd_sf_test.F90  ppidd_sf_test.f90  ppidd_test.F  ppidd_test.F90  ppidd_test.f90  ppidd_test.out  sizeofctypes.c  sizeofctypes.cpp  sizeoffortypes.F  timing_molpro.c
