cmake_minimum_required(VERSION 3.5...4.0)

add_executable(ppidd_ctest ppidd_ctest.cpp)
target_link_libraries(ppidd_ctest PRIVATE ppidd::ppidd)
find_library(GFORTRAN_LIBRARY NAMES gfortran)
if (GFORTRAN_LIBRARY)
    message(STATUS "gfortran library: ${GFORTRAN_LIBRARY}")
    target_link_libraries(ppidd_ctest PRIVATE ${GFORTRAN_LIBRARY})
endif ()
add_test(NAME ppidd_ctest COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIOPTIONS} ./ppidd_ctest)

if (CMAKE_Fortran_COMPILER_ID)
    add_executable(ppidd_test ppidd_test.f90)
    target_link_libraries(ppidd_test PRIVATE ppidd::ppidd)
    add_test(NAME ppidd_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIOPTIONS} ./ppidd_test)

    add_executable(ppidd_sf_test ppidd_sf_test.f90)
    target_link_libraries(ppidd_sf_test PRIVATE ppidd::ppidd)
    add_test(NAME ppidd_sf_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIOPTIONS} ./ppidd_sf_test)
endif ()
